# thrx

./: .gitignore  CMakeLists.txt  README.md  thrx.sln
src/: CMakeLists.txt  Config.h  PlatformSocket.h  TApplicationException.cpp  TApplicationException.h  TOutput.h
src/agent/: CMakeLists.txt
src/agent/src/: XMLreader.cpp
src/agent/tests/: XMLreaderTests.cpp
src/async/: CMakeLists.txt  TAsyncChannel.cpp  TAsyncChannel.h  TAsyncProcessor.h  TAsyncProtocolProcessor.cpp  TAsyncProtocolProcessor.h  TConcurrentClientSyncInfo.h
src/concurrency/: Exception.h  FunctionRunner.h  Monitor.cpp  Mutex.h  Thread.cpp  Thread.h  ThreadFactory.cpp
src/protocol/: CMakeLists.txt  TProtocol.h
src/test/: CMakeLists.txt  TimerManagerTests.h  test.vcxproj.filters
src/transport/: CMakeLists.txt  TBufferTransports.cpp  TBufferTransports.h  TTransportException.h  TVirtualTransport.h
src/windows/: CMakeLists.txt  Config.h
thrx/: CMakeLists.txt  NonCopyable.h  TLogging.h  TOutput.cpp  TProcessor.h  TToString.h  Thrx-config.h  Thrx.h  Thrx_export.h
thrx/agent/: XMLreader.h
thrx/agent/src/: CMakeLists.txt
thrx/agent/tests/: CMakeLists.txt
thrx/async/: TAsyncBufferProcessor.h  TAsyncDispatchProcessor.h  TAsyncProtocolProcessor.cpp  TConcurrentClientSyncInfo.cpp
thrx/concurrency/: CMakeLists.txt  Monitor.h  Mutex.cpp  ThreadFactory.h  ThreadManager.cpp  ThreadManager.h  TimerManager.cpp  TimerManager.h
thrx/protocol/: TProtocol.cpp  TProtocolException.h
thrx/test/: CMakeLists.txt  Tests.cpp  ThreadFactoryTests.h  ThreadManagerTests.h  test.vcxproj  test.vcxproj.filters
thrx/transport/: TBufferTransports.cpp  TTransport.h  TTransportException.cpp
thrx/windows/: CMakeLists.txt  GetTimeOfDay.cpp  GetTimeOfDay.h
